@@ -63,7 +63,7 @@ public class XsltConfigurationParameterConverter implements Converter<XsltConver
                 convertField(params, field, configuration);
             } catch (Exception e) {
                 logger.error(e.getMessage(), e);
-                throw new RuntimeException(String.format("error occurred introspecting XsltConverterConfiguration instance for field name: %s", field.getName()), e);
+                throw new RuntimeException("error occurred introspecting XsltConverterConfiguration instance for field name: %s".formatted(field.getName()), e);
             }
         }
 
@@ -92,33 +92,33 @@ public class XsltConfigurationParameterConverter implements Converter<XsltConver
             try {
                 getMethod = configuration.getClass().getMethod(convertFieldNameToIsMethod(field.getName()));
             } catch (NoSuchMethodException e2) {
-                String errorMessage = String.format("Unable to find getter (getXXX,isXXX) method for field: %s. Check the XsltConverterConfiguration has corresponding getter methods.", field.getName());
+                String errorMessage = "Unable to find getter (getXXX,isXXX) method for field: %s. Check the XsltConverterConfiguration has corresponding getter methods.".formatted(field.getName());
                 throw new RuntimeException(errorMessage, e2);
             }
         }
 
         if (logger.isDebugEnabled()) {
-            logger.debug(String.format("Created get method: %s, for field: %s", getMethod.getName(), field.getName()));
+            logger.debug("Created get method: %s, for field: %s".formatted(getMethod.getName(), field.getName()));
         }
 
         Object result = getMethod.invoke(configuration);
 
         if (result == null) return null;
 
-        if (result instanceof String) {
-            return (String) result;
-        } else if (result instanceof Integer) {
-            return Integer.toString((Integer) result);
-        } else if (result instanceof Long) {
-            return Long.toString((Long)result);
-        } else if (result instanceof Boolean) {
-            return Boolean.toString((Boolean) result);
+        if (result instanceof String string) {
+            return string;
+        } else if (result instanceof Integer integer) {
+            return Integer.toString(integer);
+        } else if (result instanceof Long long1) {
+            return Long.toString(long1);
+        } else if (result instanceof Boolean boolean1) {
+            return Boolean.toString(boolean1);
         } else if (result instanceof Map) {
             return convertMapToXml((Map<String, String>) result);
         } else if (result instanceof List) {
             return convertListToXml((List<String>) result);
         } else {
-            throw new RuntimeException(String.format("unsupported type, unable to convert: %s", result.getClass().getName()));
+            throw new RuntimeException("unsupported type, unable to convert: %s".formatted(result.getClass().getName()));
         }
     }
 
@@ -142,7 +142,7 @@ public class XsltConfigurationParameterConverter implements Converter<XsltConver
         builder.append("<map>");
         for (String key : keySet) {
             String value = result.get(key);
-            builder.append(String.format("<entry key=\"%s\" value=\"%s\"/>", key, value));
+            builder.append("<entry key=\"%s\" value=\"%s\"/>".formatted(key, value));
         }
         builder.append("</map>");
 
