@@ -45,7 +45,7 @@ public class HexConverter
     public static String byteArrayToHex(byte[] a) {
         StringBuilder sb = new StringBuilder(a.length * 2);
         for(byte b: a)
-            sb.append(String.format("%02x", b & 0xff));
+            sb.append("%02x".formatted(b & 0xff));
         return sb.toString();
     }
 
