@@ -99,10 +99,9 @@ public class JobProvisionApplication {
         }
         catch (Exception e) {
             e.printStackTrace();
-            logger.error(String.format("An error has occurred attempting to remove scheduler jobs for context[%s]!", contextName), e);
+            logger.error("An error has occurred attempting to remove scheduler jobs for context[%s]!".formatted(contextName), e);
             return new ResponseEntity(
-                new ErrorDto(String.format("An error has occurred attempting to remove scheduler jobs for context[%s]! Error message [%s]"
-                    , contextName, e.getMessage())), HttpStatus.BAD_REQUEST);
+                new ErrorDto("An error has occurred attempting to remove scheduler jobs for context[%s]! Error message [%s]".formatted(contextName, e.getMessage())), HttpStatus.BAD_REQUEST);
         }
         return new ResponseEntity(HttpStatus.OK);
     }
